# errtrack

./: .env.template  .gitignore  Cargo.toml  docker-compose.yaml  errtrack.toml  go.mod  go.sum  main.go
api/: Cargo.toml
api/src/: api_doc.rs  app_state.rs  config.rs  context.rs  error.rs  event.rs  event_handler.rs  flash.rs  lib.rs  post_handler.rs
api/src/model/: event_payload.rs  mod.rs
cmd/: container.go  root_cmd.go
entity/: Cargo.toml
entity/src/: error.rs  error_event.rs  lib.rs  post.rs  project.rs  user.rs
internal/config/: config.go  default_config.go  module.go  security_config.go  server_config.go
internal/controller/: authentication.go  authentication_controller.go  module.go  rbac_controller.go
internal/db/: 20250504110026_create_event_table.go  migration.go  module.go
internal/db/entity/: internal_user.go
internal/entity/: event.go  transaction.go
internal/http/: auth_middleware.go  cache_middleware.go  compress_middleware.go  cors_middleware.go  earlydata_middleware.go  envvars_middleware.go  etag_middleware.go  health_check_middleware.go  logger_middleware.go  middleware_module.go  module.go  monitor_middleware.go  request_id_middleware.go
internal/id_generator/: module.go
internal/kafka/: module.go
internal/logger/: module.go
internal/mail/: module.go
internal/model/: envelope.go  internal_user.go  rbac.go
internal/repository/: module.go  user_repository.go
internal/schedule/: module.go  monitor.go
internal/service/: authentication_service.go  jwt_service.go
migration/: Cargo.toml
migration/src/: lib.rs  m20220120_000001_create_post_table.rs  m20250503_152000_create_error.rs
module/authentication/: github_authentication.go  module.go
module/cache_module/: module.go
module/config_module/: module.go
module/controller_module/: controller.go  module.go
module/db_module/: 20250504110026_create_event_table.go  migration.go  module.go
module/event_bus_module/: module.go
module/http_module/: auth_middleware.go  cache_middleware.go  compress_middleware.go  cors_middleware.go  earlydata_middleware.go  envvars_middleware.go  etag_middleware.go  health_check_middleware.go  logger_middleware.go  middleware_module.go  module.go  monitor_middleware.go  request_id_middleware.go
module/id_generator_module/: module.go
module/kafka_module/: module.go
module/logger_module/: module.go
module/mail_module/: module.go
module/repository_module/: module.go  user_repository.go
module/schedule_mdoule/: module.go  monitor.go
module/service_module/: module.go
service/: Cargo.toml
service/src/: kafka_service.rs  lib.rs  mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
