[package]
name = "axum-example-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
axum-example-service = { path = "../service" }
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
shaku = { version = "0.6.2" }
shaku_axum = { version = "0.6.0" }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
utoipa = { version = "5", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
rdkafka = { version = "0.34", features = ["tokio"] }
tracing = "0.1.41"
