[package]
name = "axum-example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
rdkafka = { version = "0.37.0", features = ["tokio"] }
serde = {version = "1.0.219",features = ["derive"]}
serde_json = { version = "1.0.140" }
[dependencies.sea-orm]
version = "~1.1.10" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
